# deep-research-platform

./: .gitignore  CHANGELOG.md  PROGRESS.md  README.md  README_EN.md  docker-compose.yml  test3.txt  test4.txt
agent/: .env.example  Dockerfile  check_kb.py  pyproject.toml  start.bat
agent/eval/: doc1.txt  doc10_mysql.txt  doc11_nginx.txt  doc12_git.txt  doc13_elasticsearch.txt  doc14_mongodb.txt  doc15_microservices.txt  doc16_go.txt  doc17_jwt.txt  doc18_redis2.txt  doc19_distributed_lock.txt  doc2.txt  doc3.txt  doc4.txt  doc5.txt  doc6_redis.txt  doc7_kafka.txt  doc8_k8s.txt  doc9_vectordb.txt  gen_prod_docs.py  generate_testset.py  golden_testset.json  prod_000_Python 协程.txt  prod_001_Rust 所有权.txt  prod_002_TypeScript 泛型.txt  prod_003_Java 虚拟机.txt  prod_004_C++ 移动语义.txt  prod_005_Swift 协议.txt  prod_006_Kotlin 协程.txt  prod_007_Scala 隐式.txt  prod_008_PostgreSQL 索引.txt  prod_009_Apache Cassandra.txt  prod_010_Neo4j 图数据库.txt  prod_011_ClickHouse 列存储.txt  prod_012_DynamoDB 设计.txt  prod_013_CockroachDB 事务.txt  prod_014_HTTP-3 协议.txt  prod_015_DNS 解析.txt  prod_016_WebSocket 协议.txt  prod_017_TCP 拥塞控制.txt  (+35 more)
agent/reports/: 20260604_210056_报告.md  20260604_210950_报告.md  20260604_211428_报告.md  20260604_212228_报告.md  20260604_212835_报告.md
agent/src/researcher/: __init__.py  agent.py  config.py  kb.py  llm.py  search.py  server.py  trace.py
agent/src/researcher/evaluation/: .regression_baseline.json  EVALUATION_PLAN.md  _results.py  ab_compare.py  ab_run.py  ablation.py  answer_correctness.py  answer_relevance.py  faithfulness.py  (+10 more)
agent/tests/: test_quality.py  test_units.py
(+57 files in other folders)
