[project]
name = "my-deep-researcher"
version = "0.1.0"
description = "从零构建的深度研究智能体 —— Level 1 → Level 4 渐进实现"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "tavily-python>=0.5",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "markdownify>=0.11",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sse-starlette>=2.0",
    "duckduckgo-search>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
